# instaffo-python-assignment

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  solution.md
api/: Dockerfile  __init__.py  main.py
api/lib/elasticsearch/: __init__.py  dependencies.py  elastic_search_client.py  exceptions.py
api/models/: candidate_models.py  job_models.py  matching_models.py
api/repositories/: candidate_repository.py  job_repository.py
api/routes/: __init__.py  candidates.py  jobs.py
api/tests/: conftest.py  test_candidates_route.py  test_jobs_route.py
seed_image/: populate_es_indices.py
